Fix Clarke chapter number alignment. [ci skip]

--- a/themes-book/clarke/assets/styles/components/_section-titles.scss
+++ b/themes-book/clarke/assets/styles/components/_section-titles.scss
@@ -155,7 +155,7 @@ $chapter-number-font-size:(
 // $chapter-number-font-style: normal !default;
 $chapter-number-font-weight: bold !default;
 // $chapter-number-line-height: 1em !default;
-// $chapter-number-align: center !default;
+$chapter-number-align: left !default;
 // $chapter-number-text-transform: none !default;
 // $chapter-number-after-content: '. ' !default;
 //
